[tool.poetry]
package-mode = false
name = "llmzoomcamp"
version = "0.1.0"
description = ""
authors = ["ngalkov <ngalkov@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
notebook = "^7.2.1"
elasticsearch = "^8.14.0"
tqdm = "^4.66.4"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
